creacion de rama development

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -26,7 +26,7 @@
               Se requiere una contraseña!
           </p>
           <p *ngIf="Password?.errors?.['minlength']" class="text-danger">
-            Contraseña debe ser mayor a 6 caracteres!
+            Contraseña debe ser mayor a 6 caracteres!!
         </p>
         </div>
       </div>
