--- a/src/app/components/portfolioedit/portfolioedit.component.html
+++ b/src/app/components/portfolioedit/portfolioedit.component.html
@@ -1,1 +1,8 @@
-<p>portfolioedit works!</p>
+<app-header></app-header>
+<app-banner></app-banner>
+<app-aboutme></app-aboutme>
+<app-education></app-education>
+<app-experiences></app-experiences>
+<app-skills></app-skills>
+<app-projects></app-projects>
+<app-footer></app-footer>
