se agregan o modifican favicon, estilos generales, interfaces y componentes para educacion, proyectos, header, experiencias, aboutme

--- a/src/app/components/aboutme/aboutme.component.html
+++ b/src/app/components/aboutme/aboutme.component.html
@@ -3,10 +3,10 @@
       <div class="position-absolute top-70 start-0 translate-middle-y"><img id="perfilphoto" src={{persona.img}} class="rounded-circle border border-warning border-4 img-fluid shadow-lg" alt="Foto de perfil">
       </div>
     </div>
-    <div id="abouttext">
-      <h1 id="nombre" class="text-danger redglow ">{{persona.nombre}} {{persona.apellido}}</h1>
+    <div id="abouttext"> 
+      <h1 id="nombre" class="text-danger redglow ">{{persona.nombre}} {{persona.apellido}}  <app-aboutme-edit></app-aboutme-edit></h1>
       <p class="text-danger fw-bold fs-5 ">{{persona.seniority}}</p>
       <p class="text-warning fw-bold fs-5">{{persona.abouttext}}</p>
-      <p><a class="btn btn-danger fw-bold" href="#">Contacta a {{persona.apodo}}! »</a></p>
+      <!-- <p><a class="btn btn-danger fw-bold" href="#">Contacta a {{persona.apodo}}! »</a></p> -->
     </div>
   </div>
