--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,9 +1,16 @@
-<div id="education" class="container-flex">
-    <h1 class="text-danger display-3 redglow subheaders">EDUCACION</h1>
-    <div class="row">
-     <h3>Nivel Secundario</h3>
-      <p>Instituto Parroquial José Manuel Estrada (2006-2011), Bachiller en gestion agropecuaria</p>
-     <h3>Nivel Terciario</h3>
-     <p>Universidad Nacional de Córdoba (2012-2020), Licenciado en administración</p>
-   </div>
- </div>
+<div id="education">
+  <h2 id="disenotitulo" class="sticky-sm-top">
+    <div class="row align-items-center">
+      <div class="col-sm-10">
+        <h1 class="text-danger display-3 redglow subheaders">EDUCACION</h1>
+      </div>
+      <div class="col-sm-2">
+        <button class="btn btn-danger" (click)="addEducacion()" id="botonedit"><b class="text-warning">Agregar
+            Educación</b>
+        </button>
+      </div>
+    </div>
+  </h2>
+  <app-education-items *ngFor="let educacion of miEducacion" [educacion]="educacion"
+    (educacionElimiarPass)="eliminarEducacion(educacion)"></app-education-items>
+</div>
