--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -10,7 +10,7 @@
             <img src="../../../assets/images/banner1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h3 class="text-warning fw-bold bg-danger bg-opacity-50 blackshadow">Dedicación</h3>
-              <p class="text-warning fw-bold fs-5 blackshadow">Hacia la mejorar constante.</p>
+              <p class="text-warning fw-bold fs-5 blackshadow">Hacia la mejora constante.</p>
             </div>
           </div>
           <div class="carousel-item">
