--- a/src/styles.css
+++ b/src/styles.css
@@ -61,6 +61,12 @@ body {
     padding-top: 115px;
 }
 
+#abouttextedit {
+    min-height: 100px;
+    max-height: 300px;
+    height: 200px;
+}
+
 #perfilphoto {
     width: 220px;
     min-width: 150px;
@@ -74,8 +80,77 @@ body {
 
 /* class selectors propios para usar en donde haga falta  */
 
+.containerhover {
+    position: relative;
+  }
+  
+  .imagehover {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+  }
+  
+  .middlehover {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  .container:hover .imagehover {
+    filter: blur(5px);
+    -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
+    -webkit-filter: grayscale(50%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(50%);
+  }
+  
+  .container:hover .middlehover {
+    opacity: 1;
+  }
+  
+  .texthover {
+    background-color:rgba(0, 0, 0, 0.5);
+    color: yellow;
+    font-size: 20px;
+    padding: 16px 32px;
+  }
+
+
+.galacticbackground {
+    background: linear-gradient(-45deg, #f80303, #240101, #c30404, #0c0000);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.redbackground {
+    background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(48, 5, 5), rgb(0, 0, 0));
+}
+
 .redglow {
     text-shadow: 2px 2px 5px red; 
+}
+
+.yellowglow {
+    text-shadow: 2px 2px 5px yellow; 
 }
 
 .blackshadow {
