se termina de crear componentes, faltaria poner en linea el proyecto con sus urls actualizadas

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -58,7 +58,7 @@
       <!-- Botones login/logout -->
 
       <!--<button (click)="login()" id="loginbutton" type="button" class="btn btn-danger fw-semibold" >Login</button>-->
-      <button (click)="signOut()" id="loginbutton" type="button" class="btn btn-danger fw-semibold text-warning" >Logout</button>
+      <button (click)="signOut()" id="logoutbutton" type="button" class="btn btn-danger fw-semibold text-warning" >Logout</button>
     </header>
 
     <!-- Atajos a secciones de la pagina -->
