--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,3 +1,6 @@
+<!-- Componente REGISTER funciona correctamente pero esta desabilitado por que cualquier usuario que se registre 
+puede hacer modificaciones por el momento, se ajustara mas adelante el tema. -->
+
 <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
