--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,11 +6,11 @@
         <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
       </a>
   
-      <ul class="nav col-md-4 justify-content-end">
+      <!-- <ul class="nav col-md-4 justify-content-end">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">.</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">.</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">.</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">.</a></li>
-      </ul>
+      </ul> -->
     </footer>
   </div>
