--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -65,7 +65,8 @@
     <!-- Botones login/logout -->
 
     <button (click)="login()" id="loginbutton" type="button" class="btn btn-danger"><b class="text-warning">Login</b></button>
-    <!--<button (click)="signOut()" id="loginbutton" type="button" class="btn btn-danger fw-semibold" >Logout</button>-->
+    <button (click)="register()" id="registerbutton" type="button" class="btn btn-danger"><b class="text-warning">Register</b></button>
+    <!--<button (click)="signOut()" id="logoutbutton" type="button" class="btn btn-danger fw-semibold" >Logout</button>-->
   </header>
 
   <!-- Atajos a secciones de la pagina -->
@@ -136,11 +137,59 @@
 
 <!-- Skills -->
 
-<app-skills></app-skills>
+<div id="skills" class="container-flex">
+  <h1 class="text-danger display-3 redglow subheaders"> HARD & SOFT SKILLS </h1>
+
+  <ul class="list-group" *ngFor="let hardskill of hardskill">
+    <div class="row g-0 p-2 align-items-center">
+      <div class="col-1 d-flex justify-content-center " ><img class="skillsthumbs" src="../../../assets/images/hardskill.png" alt="hardkill"></div>
+      <div class="col-11 ps-3 "><div class="progress bg-dark prgrsbar ">
+      <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"  aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:{{hardskill.porcentajeHaSkill}}%"><b class="text-light blackshadow">{{hardskill.nombreHaSkill.toUpperCase()}}</b></div>
+      </div>
+      </div>
+      </div>
+  </ul>
+
+  <ul class="list-group" *ngFor="let softskill of softskill">
+    <div class="row g-0 p-2 align-items-center">
+      <div class="col-1 d-flex justify-content-center " ><img class="skillsthumbs" src="../../../assets/images/softskill.png" alt="softskill"></div>
+      <div class="col-11 ps-3 "><div class="progress bg-dark prgrsbar ">
+      <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"  aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:{{softskill.porcentajeSoSkill}}%"><b class="text-dark blackshadow">{{softskill.nombreSoSkill.toUpperCase()}}</b></div>
+      </div>
+      </div>
+    </div>
+  </ul>
+
+</div>
 
 <!-- Proyectos -->
 
-<app-projects></app-projects>
+<div id="projects">
+  <h1 class="text-danger display-3 redglow subheaders">PROYECTOS</h1>
+  <div class="album py-5 redbackground ">
+    <div class="container">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <ul *ngFor="let proyecto of proyecto">
+
+          <div class="col">
+            <div class="card shadow-sm redbackground border-warning">
+              <img src="{{proyecto.urlImgProyecto}}" class="card-img-top justify-content-center" >  
+              <div class="card-body">
+                <p class="card-text text-warning fw-semibold blackshadow">{{proyecto.nombreProyecto}}</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="{{proyecto.urlProyecto}}" class="btn btn-danger text-warning fw-bold" target="_blank">Visitar!</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- Footer -->
 
